--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
+    
     <title>Weather App</title>
 </head>
 
@@ -19,8 +20,8 @@
         <div id="current-location">Current Location</div>
     </div>
 
-    <div class="weather-img">
-        <img src="./Assets/Sunny.png" alt="current-weather">
+    <div class="weather-img-cont">
+        <div id="weather-img"></div>
     </div>
 
     <div class="temp-cont">
@@ -51,22 +52,22 @@
 
     <div class="four-day-cont">
         <div class="day" id="dayone">
-            <img id="dayoneimg" src="./Assets/Sunny.png" alt="daytwoimg">
+            <div id="dayoneimg"></div>
             <div id="dayonedate">Sun 1/1</div>
             <div id="dayonetemp">10°F</div>
         </div>
-        <div class="day" id="daytwoimg">
-            <img id="daytwoimg" src="./Assets/Sunny.png" alt="daytwoimg">
+        <div class="day" id="daytwo">
+            <div id="daytwoimg"></div>
             <div id="daytwodate">Mon 1/2</div>
             <div id="daytwotemp">10°F</div>
         </div>
-        <div class="day" id="daythreeimg">
-            <img id="daythreeimg" src="./Assets/Sunny.png" alt="daytwoimg">
+        <div class="day" id="daythree">
+            <div id="daythreeimg"></div>
             <div id="daythreedate">Tues 1/3</div>
             <div id="daythreetemp">10°F</div>
         </div>
-        <div class="day" id="dayfourimg">
-            <img id="dayfourimg" src="./Assets/Sunny.png" alt="daytwoimg">
+        <div class="day" id="dayfour">
+            <div id="dayfourimg"></div>
             <div id="dayfourdate">Wed 1/4</div>
             <div id="dayfourtemp">10°F</div>
         </div>
@@ -79,5 +80,6 @@
     </div>
 </body>
 <script src="date.js"></script>
-
+<script src="weather.js"></script>
+<script src="fourDayWeather.js"></script>
 </html>
