--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
-    <script src="weather.js"></script>
-    <script src="fourDayWeather.js"></script>
+    <script src="./weather.js"></script>
+    <script src="./fourDayWeather.js"></script>
     <title>Weather App</title>
 </head>
 
