updated the file structure

--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Space Grotesk' rel='stylesheet'>
-    <script src="./weather.js"></script>
-    <script src="./fourDayWeather.js"></script>
+    <script src="../javascript/weather.js"></script>
+    <script src="../javascript/fourDayWeather.js"></script>
     <title>Weather App</title>
 </head>
 
@@ -38,13 +38,13 @@
 
     <div class="sunrise-sunset-cont">
         <div class="sunrise">
-            <img src="./Assets/Sunrise.png" alt="">
+            <img src="../Assets/Sunrise.png" alt="">
             <div id="sunrise-time">6:00am</div>
 
         </div>
 
         <div class="sunset">
-            <img src="./Assets/Sunset.png" alt="">
+            <img src="../Assets/Sunset.png" alt="">
             <div id="sunset-time">6:00pm</div>
         </div>
 
