updated some code

--- a/index.html
+++ b/index.html
@@ -81,5 +81,7 @@
     </div>
 </body>
 <script src="date.js"></script>
+<script src="../javascript/weather.js"></script>
+<script src="../javascript/fourDayWeather.js"></script>
 
 </html>
