--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <div class="changeappearence"><button id="changeappearencebtn"></button>
     </div>
 </body>
-<script src="date.js"></script>
-<script src="../javascript/weather.js"></script>
-<script src="../javascript/fourDayWeather.js"></script>
+<script src="./javascript/date.js"></script>
+<script src="./javascript/weather.js"></script>
+<script src="./javascript/fourDayWeather.js"></script>
 
 </html>
